# linux-macro

./: .gitignore  Cargo.toml  README.md  README_zh.md  key_loop_macro.py  pyproject.toml
crates/linuxmacro-cli/: Cargo.toml
crates/linuxmacro-cli/src/: main.rs
crates/linuxmacro-core/: Cargo.toml
crates/linuxmacro-core/src/: backend.rs  config.rs  input.rs  lib.rs  parser.rs  runtime.rs
macros/: ra.macro
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
ui/: index.html  main.js  styles.css
