[project]
name = "macrotest"
version = "0.1.0"
description = "A small keyboard loop macro."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "evdev>=1.9.3",
]

[project.optional-dependencies]
pynput = [
    "pynput>=1.7.6",
]

[project.scripts]
key-loop-macro = "key_loop_macro:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["key_loop_macro"]
