[package]
name = "linuxmacro-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
linuxmacro-core = { path = "../crates/linuxmacro-core" }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.11.0", features = [] }

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }
